[package]
name = "sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"
rand = "0.8.5"

[dev-dependencies]
divan = "0.1.14"
fastrand = "2.0.2"

[[bench]]
name = "sort"
harness = false
